cabal-version:      3.0
name:               language-sally
version:            0.3.0.0
synopsis:           AST and pretty printer for Sally
description:
  AST and pretty printer for the Sally
  <https://github.com/SRI-CSL/sally> input language

homepage:           https://github.com/GaloisInc/language-sally#readme
bug-reports:        https://github.com/GaloisInc/language-sally/issues
author:
  Benjamin Jones <bjones@galois.com>
  Valentin Robert <val@galois.com>

maintainer:
  Benjamin Jones <bjones@galois.com>
  Valentin Robert <val@galois.com>

copyright:          Galois, Inc. 2017-2021
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/GaloisInc/language-sally

library
  exposed-modules:
    Language.Sally
    Language.Sally.SExp
    Language.Sally.Types
    Language.Sally.Writer

  other-modules:    Paths_language_sally
  autogen-modules:  Paths_language_sally
  hs-source-dirs:   src
  ghc-options:
    -Wall -Werror=incomplete-patterns -Werror=missing-methods
    -Werror=overlapping-patterns

  build-depends:
    , ansi-wl-pprint       ^>=0.6
    , base                 >=4.8 && <4.16
    , bytestring
    , containers           >=0.5 && <0.7
    , extra
    , io-streams
    , mtl
    , parameterized-utils  >=2.0 && <2.2
    , text
    , what4                ^>=1.2

  default-language: Haskell2010
